--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input type="text" placeholder="Password " id="password" required>
     <br>
     <br>
-    <button onclick="singup()">SING UP</button>
+    <button onclick="singup()">SING UP</button> <button onclick=" window.location = 'login.html'">LOGIN</button>
 </div>
 
 
